fix: added correct font import to head

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <!-- TODO: support mobile!!! -->
 <!DOCTYPE html>
 <html>
+
+<head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+		rel="stylesheet">
+</head>
 <style>
 	:root {
 		color-scheme: light dark;
