--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
 
 		sidebar {
 			padding-top: 1rem;
+			margin-bottom: 3rem;
 			border-right: 2px dashed light-dark(var(--light-color-subtle), var(--dark-color-subtle));
 			transform: translateX(-250px);
 			transition: transform 250ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
@@ -293,6 +294,7 @@
 
 		/* turns desktop version into a popover hint */
 		chip-content {
+			resize: both;
 			position: absolute;
 			top: 100%;
 			left: 0;
@@ -300,6 +302,18 @@
 			max-width: inherit;
 			width: 18rem;
 			height: fit-content;
+		}
+
+		chip-content>a {
+			font-weight: bold;
+			display: block;
+			text-decoration: none;
+			color: light-dark(var(--light-color-popout), var(--dark-color-popout));
+			padding-bottom: 0.5rem;
+		}
+
+		chip-content>a:hover {
+			text-decoration: underline;
 		}
 
 		chip-content:hover,
@@ -348,25 +362,42 @@
 						machine learning, alongside a set of management tools</chip-content>
 				</chip>
 				<chip>
-					<chip-title tabindex="1"><a href="https://fastify.dev/" target="_blank">fastify.js</a></chip-title>
+					<chip-title tabindex="1">fastify.js</chip-title>
 					<chip-content>
+						<a href="https://fastify.dev/" target="_blank">fastify.js</a>
 						A high performance and low overheard node.js web framework. It provides a schema based validation system,
 						plugin architecture, and builtin support for json serialization; with an emphasis on asynchronous, non
 						blocking operations, with minimal overhead compared to a framework like express.js
 					</chip-content>
 				</chip>
 				<chip>
-					<chip-title tabindex="2"><a href="https://nodejs.org/en" target="_blank">node.js</a></chip-title>
+					<chip-title tabindex="2">node.js</chip-title>
 					<chip-content>
+						<a href="https://nodejs.org/en" target="_blank">node.js</a>
 						An open source, cross platform javascript runtime
 					</chip-content>
 				</chip>
 				<chip>
-					<chip-title tabindex="3"><a href="https://www.postgresql.org/" target="_blank">postgresql</a></chip-title>
-					<chip-content>A relational database system emphasizing extensability and sql compliance</chip-content>
+					<chip-title tabindex="3">postgresql</chip-title>
+					<chip-content>
+						<a href="https://www.postgresql.org/" target="_blank">postgresql</a>
+						A relational database system emphasizing extensability and sql compliance</chip-content>
 				</chip>
-				<chip>react.js</chip>
-				<chip>sequelize.js</chip>
+				<chip>
+					<chip-title tabindex="4">react.js</chip-title>
+					<chip-content>
+						<a href="https://react.dev/" target="_blank">react.js</a>
+						A front end javascript library created for building user interfaces by composing reusable components that
+						manage their own state utilizing a virtual dom
+					</chip-content>
+				</chip>
+				<chip>
+					<chip-title tabindex="5">sequelize.js</chip-title>
+					<chip-content>
+						<a href="https://sequelize.org/" target="_blank">sequelize.js</a>
+						A promise based orm for node.js
+					</chip-content>
+				</chip>
 			</work-section-description>
 		</work-section>
 		<work-section>
@@ -380,14 +411,54 @@
 				Developed in house applications to save other departments tens of hours a week.
 				Managed setting up new application infrastructure using Docker files, Google Cloud Run and automatic deploys via
 				CircleCi's continuous integration; as well as using Fastifyjs and PostgreSQL to serve data to a front-end mainly
-				using Reactjs.
+				using react.js.
 				Managed setting up new application infrastructure using<br />
-				<chip>circleCI</chip>
-				<chip>docker</chip>
-				<chip>fastify.js</chip>
-				<chip>google cloud run</chip>
-				<chip>postgreSQL</chip>
-				<chip>react.js</chip>
+				<chip>
+					<chip-title tabindex="6">circleci</chip-title>
+					<chip-content>
+						<a href="https://circleci.com" target="_blank">circleci</a>
+						A continuous integration and continuous delivery platform used for devops practices.
+					</chip-content>
+				</chip>
+				<chip>
+					<chip-title tabindex="7">docker</chip-title>
+					<chip-content>
+						<a href="https://docker.com" target="_blank">docker</a>
+						A set of products that utilizes os level virtualization to deliver software in containers.
+					</chip-content>
+				</chip>
+				<chip>
+					<chip-title tabindex="8">fastify.js</chip-title>
+					<chip-content>
+						<a href="https://fastify.dev/" target="_blank">fastify.js</a>
+						A high performance and low overheard node.js web framework. It provides a schema based validation system,
+						plugin architecture, and builtin support for json serialization; with an emphasis on asynchronous, non
+						blocking operations, with minimal overhead compared to a framework like express.js
+					</chip-content>
+				</chip>
+				<chip>
+					<chip-title tabindex="9">google cloud services</chip-title>
+					<chip-content>
+						<a href="https://cloud.google.com/" target="_blank">google cloud
+							services</a>
+						A platform with a suite of cloud computing services offered by
+						Google that provides a series of modular cloud services such as computing, data storage, data analytics, and
+						machine learning, alongside a set of management tools</chip-content>
+				</chip>
+				<chip>
+					<chip-title tabindex="10">postgresql</chip-title>
+					<chip-content>
+						<a href="https://www.postgresql.org/" target="_blank">postgresql</a>
+						A relational database system emphasizing extensability and sql compliance</chip-content>
+				</chip>
+				<chip>
+					<chip-title tabindex="11">react.js</chip-title>
+					<chip-content>
+						<a href="https://react.dev/" target="_blank">react.js</a>
+						A front end javascript library created for building user interfaces by composing reusable components that
+						manage their own state utilizing a virtual dom
+					</chip-content>
+				</chip>
 			</work-section-description>
 		</work-section>
 		<work-section>
@@ -398,14 +469,66 @@
 				May 2021 - May 2022
 			</work-section-subtitle>
 			<work-section-description>
-				<chip>angular.js</chip>
-				<chip>docker</chip>
-				<chip>express.js</chip>
-				<chip>kubernetes</chip>
-				<chip>mongoDB</chip>
-				<chip>mysql</chip>
-				<chip>node.js</chip>
-				<chip>skaffold</chip>
+				<chip>
+					<chip-title tabindex="11">angular.js</chip-title>
+					<chip-content>
+						<a href="https://angularjs.org/" target="_blank">angular.js</a>
+						A front end javascript framework for building dynamic, single page web applications; utilizing a two way
+						data binding and mvc style architecture to keep data and ui in sync.
+					</chip-content>
+				</chip>
+				<chip>
+					<chip-title tabindex="12">docker</chip-title>
+					<chip-content>
+						<a href="https://docker.com" target="_blank">docker</a>
+						A set of products that utilizes os level virtualization to deliver software in containers.
+					</chip-content>
+				</chip>
+				<chip>
+					<chip-title tabindex="13"> express.js</chip-title>
+					<chip-content>
+						<a href="https://expressjs.com" target="_blank">express.js</a>
+						A back end web application framework for node.js built for web applications and apis. Providing simple
+						routing, middleware support, and http utilities.
+					</chip-content>
+				</chip>
+				<chip>
+					<chip-title tabindex="14">kubernetes</chip-title>
+					<chip-content>
+						<a href="https://kubernetes.io/" target="_blank">kubernetes</a>
+						A platform for automating deployment, scaling, and management of containerized applications to orchestrate
+						across clusters, handling service discovery, loading balancing, and self healing.
+					</chip-content>
+				</chip>
+				<chip>
+					<chip-title tabindex="15">mongodb</chip-title>
+					<chip-content>
+						<a href="https://www.mongodb.com/" target="_blank">mongodb</a>
+						A nosql document oriented databse that stores data in json like bson documents.
+					</chip-content>
+				</chip>
+				<chip>
+					<chip-title tabindex="16">mysql</chip-title>
+					<chip-content>
+						<a href="https://www.mysql.com/" target="_blank">mysql</a>
+						A relational databse management sysetm used to store, organize, and retrieve structured data using sql.
+					</chip-content>
+				</chip>
+				<chip>
+					<chip-title tabindex="17">node.js</chip-title>
+					<chip-content>
+						<a href="https://www.nodejs.org/en" target="_blank">node.js</a>
+						An open source, cross platform javascript runtime
+					</chip-content>
+				</chip>
+				<chip>
+					<chip-title tabindex="18">skaffold</chip-title>
+					<chip-content>
+						<a href="https://www.skaffold.dev" target="_blank">skaffold</a>
+						An open source cli tool that automates the build, push, and deploy workflow for containerized applications
+						on kubernetes.
+					</chip-content>
+				</chip>
 			</work-section-description>
 		</work-section>
 	</content>
