--- a/index.html
+++ b/index.html
@@ -218,7 +218,6 @@
 		max-width: min(90vw, 480px);
 		max-height: 90vh;
 		overflow: auto;
-		width: fit-content;
 		overflow: scroll;
 	}
 
@@ -233,11 +232,10 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		margin: 2rem 14rem;
-		border-radius: 0.5rem;
-		background-color: light-dark(var(--light-color-background), var(--dark-color-background));
-		font-size: 1.5rem;
+		color: light-dark(var(--light-color-salient), var(--dark-color-salient));
+		padding-top: 0.5rem;
 		cursor: pointer;
+		width: fit-content;
 	}
 
 	chip-close:focus-within~chip-content {
@@ -382,7 +380,7 @@
 						A platform with a suite of cloud computing services offered by
 						Google that provides a series of modular cloud services such as computing, data storage, data analytics, and
 						machine learning, alongside a set of management tools
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -392,7 +390,7 @@
 						A high performance and low overheard node.js web framework. It provides a schema based validation system,
 						plugin architecture, and builtin support for json serialization; with an emphasis on asynchronous, non
 						blocking operations, with minimal overhead compared to a framework like express.js
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -400,7 +398,7 @@
 					<chip-content>
 						<a href="https://nodejs.org/en" target="_blank">node.js</a>
 						An open source, cross platform javascript runtime
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -408,7 +406,7 @@
 					<chip-content>
 						<a href="https://www.postgresql.org/" target="_blank">postgresql</a>
 						A relational database system emphasizing extensability and sql compliance
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -417,7 +415,7 @@
 						<a href="https://react.dev/" target="_blank">react.js</a>
 						A front end javascript library created for building user interfaces by composing reusable components that
 						manage their own state utilizing a virtual dom
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -425,7 +423,7 @@
 					<chip-content>
 						<a href="https://sequelize.org/" target="_blank">sequelize.js</a>
 						A promise based orm for node.js
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 			</work-section-description>
@@ -448,7 +446,7 @@
 					<chip-content>
 						<a href="https://circleci.com" target="_blank">circleci</a>
 						A continuous integration and continuous delivery platform used for devops practices.
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -456,7 +454,7 @@
 					<chip-content>
 						<a href="https://docker.com" target="_blank">docker</a>
 						A set of products that utilizes os level virtualization to deliver software in containers.
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -466,7 +464,7 @@
 						A high performance and low overheard node.js web framework. It provides a schema based validation system,
 						plugin architecture, and builtin support for json serialization; with an emphasis on asynchronous, non
 						blocking operations, with minimal overhead compared to a framework like express.js
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -477,7 +475,7 @@
 						A platform with a suite of cloud computing services offered by
 						Google that provides a series of modular cloud services such as computing, data storage, data analytics, and
 						machine learning, alongside a set of management tools
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -485,7 +483,7 @@
 					<chip-content>
 						<a href="https://www.postgresql.org/" target="_blank">postgresql</a>
 						A relational database system emphasizing extensability and sql compliance
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -494,7 +492,7 @@
 						<a href="https://react.dev/" target="_blank">react.js</a>
 						A front end javascript library created for building user interfaces by composing reusable components that
 						manage their own state utilizing a virtual dom
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 			</work-section-description>
@@ -513,7 +511,7 @@
 						<a href="https://angularjs.org/" target="_blank">angular.js</a>
 						A front end javascript framework for building dynamic, single page web applications; utilizing a two way
 						data binding and mvc style architecture to keep data and ui in sync.
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -521,7 +519,7 @@
 					<chip-content>
 						<a href="https://docker.com" target="_blank">docker</a>
 						A set of products that utilizes os level virtualization to deliver software in containers.
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -530,7 +528,7 @@
 						<a href="https://expressjs.com" target="_blank">express.js</a>
 						A back end web application framework for node.js built for web applications and apis. Providing simple
 						routing, middleware support, and http utilities.
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -539,7 +537,7 @@
 						<a href="https://kubernetes.io/" target="_blank">kubernetes</a>
 						A platform for automating deployment, scaling, and management of containerized applications to orchestrate
 						across clusters, handling service discovery, loading balancing, and self healing.
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -547,7 +545,7 @@
 					<chip-content>
 						<a href="https://www.mongodb.com/" target="_blank">mongodb</a>
 						A nosql document oriented databse that stores data in json like bson documents.
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -555,7 +553,7 @@
 					<chip-content>
 						<a href="https://www.mysql.com/" target="_blank">mysql</a>
 						A relational databse management sysetm used to store, organize, and retrieve structured data using sql.
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -563,7 +561,7 @@
 					<chip-content>
 						<a href="https://www.nodejs.org/en" target="_blank">node.js</a>
 						An open source, cross platform javascript runtime
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 				<chip>
@@ -572,7 +570,7 @@
 						<a href="https://www.skaffold.dev" target="_blank">skaffold</a>
 						An open source cli tool that automates the build, push, and deploy workflow for containerized applications
 						on kubernetes.
-						<chip-close tabindex="-1">x</chip-close>
+						<chip-close tabindex="-1">[close]</chip-close>
 					</chip-content>
 				</chip>
 			</work-section-description>
